<resources>
    <string name="app_name">eticket</string>

    <string name="tab1">街探</string>
    <string name="tab2">吃吃吃</string>
    <string name="tab3">玩玩玩</string>
    <string name="tab4">买买买</string>
    <string name="tab5">出去浪</string>
    <string name="action_search">Search</string>
    <string name="action_chat">Chat</string>
    <string name="action_new_group">New Group</string>
    <string name="action_new_broadcast">New broadcast</string>
    <string name="action_whatsapp_web">WhatsApp Web</string>
    <string name="action_starred_messages">Starred messages</string>
    <string name="action_status">Status</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_call_log">Clear call log</string>
    <string name="action_calls">Calls</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_without_icon">Without Icon</string>
    <string name="action_with_icon">With Icon</string>
    <string name="action_custom">Custom Tab</string>
    <string name="login_btn">登录</string>
    <string name="captcha_bt">获取验证码</string>
    <string name="error_invalid_password">验证码无效</string>
    <string name="error_incorrect_password">错误的验证码</string>
    <string name="error_field_required">请输入</string>
    <string name="complete">已完成</string>
    <string name="payed">已支付</string>
    <string name="going">进行中</string>
    <string name="to_pay">待支付</string>
    <string name="exception">异常</string>
    <string name="feedback_hint">请留下您的宝贵意见或建议，我们将努力改进（不少于五个字）</string>
    <string name="allRead">全部已读</string>
</resources>
