<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    android:id="@+id/scrollView">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <com.tmall.ultraviewpager.UltraViewPager
        android:id="@+id/ultra_viewpager"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@android:color/darker_gray" />


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/buttons"
        android:background="@null"
        android:paddingLeft="0dp"
        android:paddingTop="5dp"
        android:paddingRight="0dp"
        android:layout_width="fill_parent" android:layout_height="80dp"
        android:layout_below="@+id/ultra_viewpager">

        <Button
            android:id="@+id/allow"
            android:background="@null"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:drawableTop="@drawable/home_btn_interactive"
            android:text="微互动"
            android:textSize="10sp"
            android:textColor="#000000"
             />

        <Button
            android:id="@+id/deny"
            android:background="@null"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:drawableTop="@drawable/home_btn_route"
            android:text="路线查询"
            android:textSize="10sp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/deny1"
            android:background="@null"

            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:drawableTop="@drawable/home_btn_time"
            android:text="时刻查询"
            android:textSize="10sp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/deny2"
            android:background="@null"

            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:drawableTop="@drawable/home_btn_surplus"
            android:text="我的余额"
            android:textSize="10sp"
            android:textColor="#000000" />

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/notice"
        android:background="@drawable/notice_bg"
        android:layout_width="fill_parent" android:layout_height="36dp"
        android:layout_below="@+id/buttons">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="19dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp"
            android:src="@drawable/notice"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:textSize="@dimen/small_text"
            android:text="西安地铁六号线首个盾构区间双线贯通"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingRight="8dp"
            android:textSize="@dimen/small_text"
            android:text="更多"/>


    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/title1"
        android:layout_width="fill_parent" android:layout_height="36dp"
        android:layout_below="@+id/notice">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp"
            android:textSize="@dimen/large_text"
            android:text="小幸福"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="17dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp"
            android:src="@drawable/notice"/>


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/title1image"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_below="@+id/title1">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/right_ad"
                android:layout_gravity="left"
                android:paddingLeft="10dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="8dp"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/green"
                android:text="里程兑换"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="8dp"
                android:textSize="@dimen/small_text"
                android:textColor="@color/black"
                android:text="生活中的点滴，汇聚成一场赏心悦目的惊喜。"/>



        </LinearLayout>


        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/left_ad"
                android:paddingLeft="10dp"
                android:layout_gravity="left"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="8dp"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/green"
                android:text="里程兑换"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="8dp"
                android:textSize="@dimen/small_text"
                android:textColor="@color/black"
                android:text="生活中的点滴，汇聚成一场赏心悦目的惊喜。"/>

        </LinearLayout>



    </LinearLayout>







    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title1image"
        android:id="@+id/tabrootlayout">

        <android.support.design.widget.TabLayout
            android:id="@+id/tablayout"
            app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:tabBackground="@color/colorPrimary"
            app:tabGravity="fill"
            app:tabMode="scrollable"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabSelectedTextColor="@color/colorTextPrimary"
            app:tabTextColor="@color/colorTextDisable">

            <android.support.design.widget.TabItem
                android:id="@+id/tab1"
                style="@style/tab_item"
                android:text="@string/tab1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab2"
                style="@style/tab_item"
                android:text="@string/tab2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab3"
                style="@style/tab_item"
                android:text="@string/tab3" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab4"
                style="@style/tab_item"
                android:text="@string/tab4" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab5"
                style="@style/tab_item"
                android:text="@string/tab5" />

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tablayout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </RelativeLayout>



</RelativeLayout>

</ScrollView>